--- a/siakad-backend/package.json
+++ b/siakad-backend/package.json
@@ -11,7 +11,9 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "knex": "^3.1.0",
     "mysql2": "^3.14.5"
   }
 }
