--- a/siakad-backend/package.json
+++ b/siakad-backend/package.json
@@ -1,19 +1,26 @@
 {
   "name": "siakad-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Backend Sistem Informasi Akademik",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^5.1.0",
     "knex": "^3.1.0",
-    "mysql2": "^3.14.5"
+    "morgan": "^1.10.1",
+    "mysql2": "^3.14.5",
+    "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
