--- a/siakad-frontend/package.json
+++ b/siakad-frontend/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.18",
     "jose": "^6.1.0",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "mysql2": "^3.14.5",
     "next": "15.5.3",
     "primeflex": "^4.0.0",
