--- a/siakad-backend/package.json
+++ b/siakad-backend/package.json
@@ -12,13 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "jose": "^6.1.0",
     "knex": "^3.1.0",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.5",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "zod": "^4.1.9"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
