--- a/siakad-frontend/package.json
+++ b/siakad-frontend/package.json
@@ -21,22 +21,26 @@
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "mysql2": "^3.14.5",
-    "next": "15.5.3",
+    "next": "^15.5.3",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.7",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "sass": "^1.92.1",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.1.13",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^24.4.0",
     "@types/react": "^19.1.13",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2"
   }
 }
